[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/172707__axtoncrolley__nodens-field-song.ogg" type="AudioStream" id=5]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="HUD" parent="." index="0" instance=ExtResource( 2 )]

[node name="Ground" parent="." index="1" instance=ExtResource( 3 )]

collision_layer = 0
_sections_unfolded = [ "Collision", "Occluder", "Transform" ]

[node name="Player" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 326.821, 228.188 )

[node name="Climate" type="Node2D" parent="." index="3"]

[node name="Food" type="Node2D" parent="." index="4"]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="FoodSpawn" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="ClimateSpawn" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="DifficultyRamp" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false


